sfdc/objects/BreakDownProduct__c.object
<CustomObject>
    <fields>
        <fullName>ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Breakdown Products (Parent Product)</relationshipLabel>
        <relationshipName>Breakdown_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Packaged Product</relationshipLabel>
        <relationshipName>PackagedProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Breakdown Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breakdown Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>